--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="setbackground">#a6000000</color>
+    <color name="setbackground2">#3FFFFFFF</color>
+    <color name="setbackground3">#00000000</color>
+    <color name="setbackground4">#7e000000</color>
 </resources>
