2024、6、26，换镜框完成，目前进度：p158页

--- a/app/src/main/res/layout/activity_photo_frame.xml
+++ b/app/src/main/res/layout/activity_photo_frame.xml
@@ -17,6 +17,7 @@
 
 
     <GridView
+        android:id="@+id/photo_frame_list"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_e"
         android:layout_weight="1"
